--- a/assets/sass/global/_buttons.scss
+++ b/assets/sass/global/_buttons.scss
@@ -49,7 +49,6 @@ button {
     z-index: -1;
     width: 100%;
     height: 0;
-    background: #fff;
   }
   
   &:hover:after {
